This is new Feature

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <P>Hello this is my first local repository Which is created by me on local system</P>
 <br>
 Author - Rachit rai
+<p>This is a new feature</p>
